# fastapi-lifespan-handler

./: LICENSE.md  README.md  pyproject.toml
app/: http_client.py  main.py  runserver.py
