[tool.poetry]
name = "fastapi-lifespan-handler"
version = "0.1.0"
description = ""
authors = ["Trond Hindenes <trond@hindenes.com>"]
readme = "README.md"
packages = [{include = "fastapi_lifespan_handler"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.94.0"}
httpx = "^0.23.3"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
